--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -36,7 +36,7 @@
 .text-center {
   text-align: center;
 }
-.description-padding{
+.description-padding {
   padding-left: 115px;
   padding-right: 115px;
   padding-top: 30px;
@@ -54,7 +54,10 @@
 .dark-3 {
   color: rgb(117, 117, 117);
 }
-
+/* Dark 05 */
+.dark-5 {
+  border: 1px solid rgb(209, 209, 209);
+}
 /* header style  */
 .header {
   background: url("../images/developer.png"), url("../images/header_bg.png");
@@ -147,13 +150,38 @@ main section {
   border-radius: 5px;
   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
   background: rgb(255, 255, 255);
-  
 }
-.skill-title{
+.skill-title {
   font-size: 20px;
   font-weight: 700;
 }
-.skill-description{
+.skill-description {
   font-weight: 400;
   font-size: 16px;
+}
+/* resume section style */
+.resume-container {
+  display: flex;
+  gap: 24px;
+}
+.resume-column-title {
+  font-size: 30px;
+  font-weight: 700;
+}
+.experience-title {
+  font-size: 25px;
+  font-weight: 700;
+}
+.experience-sub-title {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.resume hr {
+  margin: 30px 0px;
+}
+.experience {
+}
+.btn-download-cv{
+  margin-top: 50px;
 }
